# Ecdar-GUI-gRPC-Communication

./: .gitmodules  Cargo.toml  README.md  build.rs
ecdar-protobuff-rs-macros/: Cargo.toml
ecdar-protobuff-rs-macros/src/: lib.rs
ecdar-protobuff-rs-macros/src/to_serde/: mod.rs  protoc_oneof.rs
src/: lib.rs
